# imgui-serial

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
src/: config.hpp  file_dialog_config.hpp  imgui_backend.cpp  imgui_backend.hpp  logging.cpp  logging.hpp  main.cpp  rendering.cpp  serial.cpp  serial.hpp  spc_file.cpp  spc_file.hpp  spc_player.cpp  spc_player.hpp
src/platform/: os_helper.hpp  os_helper_linux.cpp  os_helper_windows.cpp  serial_linux.cpp  serial_windows.cpp
src/ui/: application.cpp  application.hpp  file_dialog.cpp  file_dialog.hpp
test/: CMakeLists.txt
